Added unordered list for Ingredients, and ordered list for Steps for Chicken Burrito

--- a/recipes/chicken-burrito.html
+++ b/recipes/chicken-burrito.html
@@ -8,5 +8,30 @@
   <body>
     <h1>Chicken Burrito</h1>
     <img src="../images/chicken-burrito.jpg" alt="Chicken Burrito">
-  </body>
+    <p>This recipe has cubed chicken, with a lot of freedom as to what fillings you want</p>
+    <h2>Ingredients:</h2>
+        <ul>
+            <li>Chicken</li>
+            <li>Salt</li>
+            <li>Sugar</li>
+            <li>Spices</li>
+            <ul>
+                <li>Paprika</li>
+                <li>Garlic Powder</li>
+                <li>Cumin</li>
+                <li>Onion Powder</li>
+                <li>Pepper</li>
+            </ul>
+        </ul>
+    <h2>Steps:</h2>
+        <ol>
+            <li>Mix all the spices together and marinate the chicken overnight</li>
+            <li>Preheat the oven to 205<sup>o</sup> celcius</li>
+            <li>Heat up a bit of oil and sear the chicken on both sides</li>
+            <li>Cook the chicken in the oven for 10 minutes</li>
+            <li>Take it out the oven, cube up the chicken and put it back</li>
+            <li>Toss into the juices for max flavour and continue cooking for 5 mins</li>
+            <li>Enjoy with fillings of your choice. I recommend sweet chilli, lettuce, sweetcorn and fried onions</li>
+        </ol>
+</body>
 </html>
