Added ingredients and steps for Chicken Katsu Recipe

--- a/recipes/chicken-katsu.html
+++ b/recipes/chicken-katsu.html
@@ -8,5 +8,26 @@
   <body>
     <h1>Chicken Katsu</h1>
     <img src="../images/chicken-katsu.jpg" alt="Chicken Katsu">
+    <h2>Ingredients:</h2>
+    <ul>
+        <li>Onion</li>
+        <li>Garlic</li>
+        <li>Sugar</li>
+        <li>Tumeric</li>
+        <li>Curry Powder</li>
+        <li>Stock Cube</li>
+        <li>Coconut Milk</li>
+        <li>Soy Sauce</li>
+    </ul>
+<h2>Steps:</h2>
+    <ol>
+        <li>Saute onion and garlic, then add the spices to toast</li>
+        <li>Add chicken stock</li>
+        <li>Slowly add coconut milk, bring it to boil each time</li>
+        <li>Add the sugar and soy sauce</li>
+        <li>Blend it all together</li>
+        <li>Flour -> Egg -> Panko </li>
+        <li>Deep fry or Air fry at 205<sup>o</sup> for 16 mins</li>
+    </ol>
   </body>
 </html>
