Added a button on both recipe pages so that user can go back to main menu

--- a/recipes/chicken-burrito.html
+++ b/recipes/chicken-burrito.html
@@ -7,7 +7,7 @@
 
   <body>
     <h1>Chicken Burrito</h1>
-    <img src="../images/chicken-burrito.jpg" alt="Chicken Burrito">
+    <img src="../images/chicken-burrito.jpg" alt="Chicken Burrito" style="height: 500px; width: auto">
     <p>This recipe has cubed chicken, with a lot of freedom as to what fillings you want</p>
     <h2>Ingredients:</h2>
         <ul>
@@ -33,5 +33,6 @@
             <li>Toss into the juices for max flavour and continue cooking for 5 mins</li>
             <li>Enjoy with fillings of your choice. I recommend sweet chilli, lettuce, sweetcorn and fried onions</li>
         </ol>
+    <a href="../index.html"><h3>Back To Main Menu</h3></a>
 </body>
 </html>
