--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken-burrito.html">Chicken Burrito</a>
-    <a href="recipes/chicken-katsu.html">Chicken Katsu</a>
+      <p>Welcome to my first project.</p>
+      <ul>
+        <li><a href="recipes/chicken-burrito.html">Chicken Burrito</a></li>
+        <li><a href="recipes/chicken-katsu.html">Chicken Katsu</a></li>
+        <li><a href="recipes/beans-and-toast.html">Beans And Toast</a></li>
+      </ul>
   </body>
 </html>
