Add CSS grouped styling to all. (Does not look nice at the moment, mainly colours for reference)

--- a/recipes/beans-and-toast.html
+++ b/recipes/beans-and-toast.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Beans and Toast Recipe</title>
+    <link rel="stylesheet" href="../styles.css"/>
   </head>
 
   <body>
-    <h1>Beans and Toast</h1>
+    <h1 class="header">Beans and Toast</h1>
     <img src="../images/beans-and-toast.jpg" alt="Beans and toast" style="height: 500px; width: auto">
-    <p>This recipe is a simple food. With just two ingredients how does it go wrong</p>
+    <p class="description">This recipe is a simple food. With just two ingredients how does it go wrong</p>
     <h2>Ingredients:</h2>
         <ul>
             <li>Beans</li>
