--- a/recipes/chicken-burrito.html
+++ b/recipes/chicken-burrito.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Chicken Burrito Recipe</title>
+    <link rel="stylesheet" href="../styles.css"/>
   </head>
 
   <body>
-    <h1>Chicken Burrito</h1>
+    <h1 class="header">Chicken Burrito</h1>
     <img src="../images/chicken-burrito.jpg" alt="Chicken Burrito" style="height: 500px; width: auto">
-    <p>This recipe has cubed chicken, with a lot of freedom as to what fillings you want</p>
+    <p class="description">This recipe has cubed chicken, with a lot of freedom as to what fillings you want</p>
     <h2>Ingredients:</h2>
         <ul>
             <li>Chicken</li>
