--- a/recipes/chicken-katsu.html
+++ b/recipes/chicken-katsu.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <title>Chicken Katsu Recipe</title>
+    <link rel="stylesheet" href="../styles.css"/>
   </head>
 
   <body>
-    <h1>Chicken Katsu</h1>
+    <h1 class="header">Chicken Katsu</h1>
     <img src="../images/chicken-katsu.jpg" alt="Chicken Katsu" style="height: 500px; width: auto">
-    <h2>Ingredients:</h2>
+    <p class="description">This is a japanese cuisine. It has panko chicken alongside a lovely curry sauce served over rice</p>
+    <h2 class="instructions">Ingredients:</h2>
       <ul>
           <li>Onion</li>
           <li>Garlic</li>
@@ -19,7 +21,7 @@
           <li>Coconut Milk</li>
           <li>Soy Sauce</li>
       </ul>
-    <h2>Steps:</h2>
+    <h2 class="instructions">Steps:</h2>
       <ol>
           <li>Saute onion and garlic, then add the spices to toast</li>
           <li>Add chicken stock</li>
