--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Eddy's Recipe Page</title>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
-      <p>Welcome to my first project.</p>
+    <h1 class="header">Odin Recipes</h1>
+      <p class="description">Welcome to my first project. Please find a few of my recipes listed out.</p>
       <ul>
         <li><a href="recipes/chicken-burrito.html">Chicken Burrito</a></li>
         <li><a href="recipes/chicken-katsu.html">Chicken Katsu</a></li>
